--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -1,5 +1,4 @@
-# .github/workflows/frontend-ci.yml
-name: Frontend CI Build and Push
+name: CI For Frontend
 
 on:
   push:
@@ -14,20 +13,35 @@ on:
       - main
 
 jobs:
-  build-and-push-frontend:
+  php-and-docker:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+    # 1️⃣ Checkout code
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - uses: docker/setup-buildx-action@v2
+    # 2️⃣ Set up PHP for linting
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.1'
 
-      - uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    # 3️⃣ Log in to Docker Hub
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - uses: docker/build-push-action@v4
-        with:
-          context: ./frontend
-          push: true
-          tags: hashonekyaw/frontend:latest
+    # 4️⃣ Build Docker image (tag with SHA + latest)
+    - name: Build Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:${{ github.sha }} -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest .
+
+    # 5️⃣ Push Docker image (both tags)
+    - name: Push Docker image (SHA tag)
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:${{ github.sha }}
+      
+    - name: Push Docker image (latest tag)
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
